--- a/CSS/stilos.css
+++ b/CSS/stilos.css
@@ -7,6 +7,12 @@ body
     margin: 0;
     padding: 0;
 }
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0,5
+    );
+}
 
 #container
 {
