--- a/CSS/stilos.css
+++ b/CSS/stilos.css
@@ -2,7 +2,7 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: "Courier";
+    font-family: "Arial";
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -11,15 +11,6 @@ body
 {
     background: #33A;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0, 5);
-    color: white;
-    font-weight: bold;
-    margin: 0;
-    padding: 0.5em;
-}
-#cabecera #tagline
-{
-    font-weight: normal;
-    font-size: 0.8em;
 }
 
 #container
